--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,5 +26,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts'
-  PathtoPublish: '$(System.DefaultWorkingDirectory)/$(Build.BuildId).zip'
-  name: 'build'
+  targetPath: '$(System.DefaultWorkingDirectory)/$(Build.BuildId).zip'
+  artifactName: 'build'
